--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Async Estimate</title>
-    <!--- <link rel="stylesheet" href="style.css"> --->
-  </head>
-  <body>
-	<script src="./dist/index.bundle.js" type="module">
-    </script>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Async Estimate</title>
+        <!--- <link rel="stylesheet" href="style.css"> --->
+    </head>
+    <body>
+        <div id="target"></div>
+        <script src="./dist/index.bundle.js" type="module"></script>
+    </body>
 </html>
